Fix for ve overlap

--- a/src/scss/components/navigation.scss
+++ b/src/scss/components/navigation.scss
@@ -10,6 +10,7 @@
   min-height: 60px;
   font-family: $te-font-bold;
   background-color: $te-lightblue;
+  z-index: 1; // avoid to be above the visual editor
 
   // Avoid shrinking when a flex item children
   flex-shrink: 0;
